--- a/style.css
+++ b/style.css
@@ -38,6 +38,20 @@ Creation of Jules Wyvern
 
 
 */
+:root {
+  --thin-font: 400;
+  --bold-font: 600;
+
+  --Soft-blue: hsl(215, 51%, 70%);
+  --Cyan: hsl(178, 100%, 50%);
+
+  --Very-dark-blue-main: hsl(217, 54%, 11%);
+  --Very-dark-blue-card: hsl(216, 50%, 16%);
+  --Very-dark-blue-line: hsl(215, 32%, 27%);
+
+  --White: hsl(0, 0%, 100%);
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 *,
 *::before *::after {
@@ -47,33 +61,87 @@ Creation of Jules Wyvern
 }
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background-color: hsl(217, 54%, 11%);
+  background-color: var(--Very-dark-blue-main);
   font-family: "outfit", sans-serif;
   font-size: 18px;
+  min-height: 100vh;
+  overflow: hidden;
 }
 main {
-  background-color: hsl(216, 50%, 16%);
-  color: white;
+  background-color: var(--Very-dark-blue-card);
+  color: var(--White);
   padding: 20px;
   max-width: 300px;
   border-radius: 15px;
 }
-.main-img{
+.container {
+  margin: 30px auto;
+  padding: 0 10px;
+}
+.img {
+  position: relative;
+}
+.main-img {
   width: 100%;
   border-radius: 15px;
+  display: block;
 }
-.text h1{
+
+.img-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  opacity: 0;
+  border-radius: 15px;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(178, 100%, 50%, 0.3);
+  transition: 1s;
+}
+
+.img-overlay:hover {
+  opacity: 1;
+  transition: 1s;
+}
+.text h1 {
   font-size: 20px;
+  font-weight: var(--bold-font);
 }
-.text h2{
-  font-size: 14px;
+.text h2 {
+  font-size: 16px;
+  color: var(--Soft-blue);
+  font-weight: var(--thin-font);
+  line-height: 1.6rem;
 }
 .icon {
   display: flex;
   justify-content: space-between;
+}
+.eth h3 {
+  font-size: 15px;
+  color: var(--Cyan);
+  font-weight: var(--bold-font);
+}
+.time h3 {
+  font-size: 15px;
+  color: var(--Soft-blue);
+  font-weight: var(--bold-font);
+}
+.eth img {
+  margin-right: 10px;
+}
+.time img {
+  margin-right: 10px;
+}
+hr {
+  border: none;
+  background-color: var(--Very-dark-blue-line);
+  height: 1px;
 }
 .eth,
 .time {
@@ -86,17 +154,26 @@ main {
   align-items: center;
 }
 .creator img {
-  width: 50px;
+  width: 30px;
   margin-right: 1rem;
+  border: 2px solid var(--White);
+  border-radius: 100px;
 }
-
+.creator h4 {
+  font-size: 15px;
+  color: #697f9d;
+  font-weight: var(--thin-font);
+}
+.creator h4 span {
+  color: var(--White);
+}
 .attribution {
   margin-top: 1rem;
   font-size: 11px;
   text-align: center;
   font-size: 15px;
-  font-weight: 700;
-  color: white;
+  font-weight: var(--bold-font);
+  color: var(--White);
 }
 
 .attribution a {
