--- a/style.css
+++ b/style.css
@@ -72,18 +72,18 @@ main {
 }
 
 .text h1 {
-  margin-top: 1rem;
-  font-size: 20px;
+  font-size: 23px;
   font-weight: var(--bold-font);
   transition: 0.5s;
   cursor: pointer;
+  margin: 1.7rem 0;
 }
 .text h1:hover {
   color: var(--Cyan);
 }
 
 .text h2 {
-  font-size: 16px;
+  font-size: 17px;
   color: var(--Soft-blue);
   font-weight: var(--thin-font);
   line-height: 1.6rem;
