--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
   font-weight: var(--bold-font);
   transition: 0.5s;
   cursor: pointer;
-  margin: 1.7rem 0;
+  margin: 1.5rem 0;
 }
 .text h1:hover {
   color: var(--Cyan);
@@ -93,7 +93,7 @@ main {
 
 .icon {
   display: flex;
-  margin: 1.5rem 0;
+  margin-bottom: 1.2rem;
   justify-content: space-between;
 }
 
